--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<link rel="stylesheet" href="css/main.css">
 
 		<!-- http://modernizr.com/download/?-es5-setclasses -->
-		<script src="script/vendor/modernizr-custom.min.js"></script>
+    	<script src="script/vendor/modernizr-custom.min.js"></script>
 
 		<script>
 			var // Nos servirá para iniciar diálogo por cada instrucción de ser necesario
 				dialogo = [];
 
-			if( !Modernizr.es5 ) {
+			if( !Modernizr.es5) {
 
 				dialogo[0] = 'shim';
 
@@ -75,7 +75,8 @@
 		</main>
 		<footer role="contentinfo">
 			<p>¿Piensas que no se puede? <em>...haz tu mismo las pruebas.</em></p>
-			<p><a href="li5.html">Zepto</a> | <a href="5.html">HTML5</a> | <a href="5.xhtml">XHTML5</a> | <a href="plainjs5.html">PlainJS</a></p>
+			<p>Con Polyfills: <a href="li5.html">Zepto</a> | <a href="plainjs5.html">PlainJS</a> <br /> 
+			Sin Polyfills: <a href="5.html">HTML5</a> | <a href="5.xhtml">XHTML5</a></p>
 		</footer>
 
 		<div id="preload">
@@ -88,7 +89,7 @@
 
 <!-- =============== TODO javascript =============== -->
 		<script>
-			/*! Opcional | TODO Plain JS !*/
+			/*! TODO Plain JS !*/
 		  	document.write( '\u003Cscript type="text/javascript" src="script/' + ( dialogo.indexOf('es5') != -1 ? 'vanilla' : 'non-legacy' ) + '.js">\u003C/script>' );
 		</script>
 <!-- =============== FIN javascript =============== -->
