--- a/plainjs5.html
+++ b/plainjs5.html
@@ -1,107 +1,119 @@
 <!doctype html>
 <html class="no-js" lang="es-PE">
-	<head>
-		<meta charset="utf-8">
-		<title>SisePuede: Vanilla JS, para navagadores antiguos y modernos</title>
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
-    	<meta name="description" content="SisePuede: Solución para navegadores antiguos y modernos">
-    	<meta content="Pedro Macedo Minchán" name="author">
-    	<meta name="contact" content="pedro.macedo.minchan@gmail.com">
-    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-		
-		<!-- // TODO nuestro estilo CSS2+ -->
-		<link rel="stylesheet" href="css/main.css">
+<head>
+    <meta charset="utf-8">
+    <title>SisePuede: Vanilla JS, para navagadores antiguos y modernos</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="SisePuede: Solución para navegadores antiguos y modernos">
+    <meta content="Pedro Macedo Minchán" name="author">
+    <meta name="contact" content="pedro.macedo.minchan@gmail.com">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <!-- // TODO nuestro estilo CSS2+ -->
+    <link rel="stylesheet" href="css/main.css">
+    <!-- http://modernizr.com/download/?-es5-setclasses -->
+    <script src="script/vendor/modernizr-custom.min.js"></script>
 
-		<!-- http://modernizr.com/download/?-es5-setclasses -->
-		<script src="script/vendor/modernizr-custom.min.js"></script>
+    <script>
+    var // Nos servirá para iniciar diálogo por cada instrucción de ser necesario
+        dialogo = [];
 
-		<script>
-			var // Nos servirá para iniciar diálogo por cada instrucción de ser necesario
-				dialogo = [];
+    if ( !Modernizr.es5 ) {
 
-			if( !Modernizr.es5 ) {
+        dialogo[0] = 'shim';
 
-				dialogo[0] = 'shim';
+        /*! @ref http://www.hagenburger.net/BLOG/Simple-HTML5-Fix-for-IE.html !*/
+        'article aside dialog figcaption figure footer header main nav section mark template'.replace(/\w+/g, function(n) {
+            document.createElement(n)
+        });
 
-				/*! @ref http://www.hagenburger.net/BLOG/Simple-HTML5-Fix-for-IE.html !*/
-				'article aside dialog figcaption figure footer header main nav section mark template'.replace(/\w+/g,function(n){document.createElement(n)});
+        /*! @ref http://browserhacks.com/#hack-51eca7694aed2dcc3266bc9c8de72872 !*/
+        if ( /*@cc_on!@*/ true) {
 
-				/*! @ref http://browserhacks.com/#hack-51eca7694aed2dcc3266bc9c8de72872 !*/
-				if ( /*@cc_on!@*/true ) {
+            dialogo[1] = 'no-IE';
 
-					dialogo[1] = 'no-IE';
-	
-					/*! @ref https://github.com/termi/CSS_selector_engine !*/
-					document.write( '\u003Cscript src="script/vendor/legacy/CSS_selector_engine.js">\u003C/script>' );
+            /*! @ref https://github.com/termi/CSS_selector_engine !*/
+            document.write('\u003Cscript src="script/vendor/legacy/CSS_selector_engine.js">\u003C/script>');
 
-					// {Aquí se puede agregar más polyfills para ECMAScript <= 5: http://html5polyfills.com}
+            // {Aquí se puede agregar más polyfills para ECMAScript <= 5: http://html5polyfills.com}
 
-				} else {
-					/*! https://gist.github.com/jalbertbowden/5174156 !*/
-					var ieVersion = ( !!window.ActiveXObject && +( /msie\s(\d+)/i.exec( navigator.userAgent )[1] ) ) || NaN;
+        } else {
+            /*! https://gist.github.com/jalbertbowden/5174156 !*/
+            var ieVersion = (!!window.ActiveXObject && +(/msie\s(\d+)/i.exec(navigator.userAgent)[1])) || NaN;
 
-					if( ieVersion ) dialogo[2] = 'IE';
+            if (ieVersion) dialogo[2] = 'IE';
 
-					/*! @ref https://github.com/termi/ES5-DOM-SHIM !*/
-					if ( ieVersion == 8 ) document.write( '\u003Cscript src="script/vendor/legacy/a.ie8.js">\u003C/script>' );
-					if ( ieVersion < 8 ) document.write( '\u003Cscript src="script/vendor/legacy/a.ielt8.js">\u003C/script>' );
+            /*! @ref https://github.com/termi/ES5-DOM-SHIM !*/
+            if (ieVersion == 8) document.write('\u003Cscript src="script/vendor/legacy/a.ie8.js">\u003C/script>');
+            if (ieVersion < 8) document.write('\u003Cscript src="script/vendor/legacy/a.ielt8.js">\u003C/script>');
 
-					// {Aquí se puede agregar más polyfills sólo para IE<10: http://html5polyfills.com}
+            // {Aquí se puede agregar más polyfills sólo para IE<10: http://html5polyfills.com}
 
-				}
-				
-				/*! Añadimos ECMAScript 5 Shim !*/
-				document.write( '\u003Cscript src="script/vendor/legacy/a.js">\u003C/script>' );
-			}
+        }
 
-			dialogo[3] = 'es5';
+        /*! Añadimos ECMAScript 5 Shim !*/
+        document.write('\u003Cscript src="script/vendor/legacy/a.js">\u003C/script>');
+    }
 
-			/*! AQUÍ añade ECMAScript 6 Shim !*/
+    dialogo[3] = 'es5';
 
-		</script>
+    /*! AQUÍ añade ECMAScript 6 Shim !*/
+    </script>
+    <!-- // Cuando el navegador tiene desactivado el motor de Javascript -->
+    <noscript>
+        <link rel="stylesheet" href="css/no-js.css">
+    </noscript>
+</head>
+<!-- // El Cuerpo del Documento HTML5 -->
 
-		<!-- // Cuando el navegador tiene desactivado el motor de Javascript -->
-		<noscript><link rel="stylesheet" href="css/no-js.css"></noscript>
-	</head>
-	
-	<!-- // El Cuerpo del Documento HTML5 -->
-	<body>
-		<header role="banner">
-			<h1>¡Si se puede!</h1>
-			<h2>no-Legacys</h2>
-		</header>
-		<main role="main">
-			<blockquote cite="http://www.ecma-international.org/ecma-262/5.1/"><p>¡Empieza ahora a usar <mark>Vanilla JS con ECMAScript 5!+</mark> :) </p></blockquote>
-		</main>
-		<footer role="contentinfo">
-			<p>¿Pensabas que no se podía? <em>...úsalo.</em></p>
-		</footer>
+<body>
+    <header role="banner">
+        <h1>¡Si se puede!</h1>
+        <h2>no-Legacys</h2>
+    </header>
+    <main role="main">
+        <blockquote cite="http://www.ecma-international.org/ecma-262/5.1/">
+            <p>¡Empieza ahora a usar
+                <mark>Vanilla JS con ECMAScript 5!+</mark> :) </p>
+        </blockquote>
+    </main>
+    <footer role="contentinfo">
+        <p>¿Pensabas que no se podía? <em>...úsalo.</em></p>
+    </footer>
+    <div id="preload">
+        <div id="preload-content">
+            <p>Bienvenido...</p>
+            <p id="browsehappy">Estás usando un navegador <strong>desactualizado</strong>. Por favor, <a href="http://browsehappy.com/">actualice tu navegador</a> para mejorar la experiencia.</p>
+        </div>
+    </div>
+    <!-- =============== TODO javascript =============== -->
+    <script>
+    /*! Opcional | TODO Plain JS !*/
+    (function(what, can, i, use) {
+        'use strict';
 
-		<div id="preload">
-			<div id="preload-content">
-				<p>Bienvenido...</p>
-				<p id="browsehappy">Estás usando un navegador <strong>desactualizado</strong>. Por favor, <a href="http://browsehappy.com/">actualice tu navegador</a> para mejorar la experiencia.</p>
-			</div>
-		</div>
+        use = use || !this;
 
+        what(can, i, use);
 
-<!-- =============== TODO javascript =============== -->
-	<script>
-		/*! Opcional | TODO Plain JS !*/
-	    (function(g,d){
-	        var caniuse = dialogo.indexOf('es5')!= -1,
-	        	what 	= function(all){
-				        	var h = d.documentElement||d.body.parentNode||d.body,
-				        		k = h.nodeName.toLowerCase()==='svg'?h.className.baseVal:h.className;
-				        return all 	? (k=k.replace(/(\s|^)no-es5(\s|$)/, ' '),'vanilla')
-				        			: (k+=' no-es5',d.getElementById('browsehappy').style.display='block','non-legacy');
-				        };
+        i.write('\u003Cscript src="script/' + (use ? 'vanilla' : 'non-legacy') + '.js">\u003C/script>');
 
-	        d.write('\u003Cscript src="script/'+what(caniuse)+'.js">\u003C/script>')
+    })(typeof what === 'function' ? what : function() {}, (function() {
+        return this || (1, eval)('this');
+    }()), document, dialogo.indexOf('es5') != -1);
 
-	    })("undefined"!==typeof window?window:"undefined"!==typeof global?global:"undefined"!==typeof self?self:this,document);
-	</script>
-<!-- =============== FIN javascript =============== -->
+    function what(w, d, c) {
+        h = d.documentElement || d.body.parentNode || d.body,
+            k = h.nodeName.toLowerCase() === 'svg' ? h.className.baseVal : h.className;
+        if (!c) {
+            k += ' no-es5';
+            d.getElementById('browsehappy').style.display = 'block'
+        } else {
+            k = k.replace(/(\s|^)no-es5(\s|$)/, ' ');
+        }
+        return;
+    }
+    </script>
+    <!-- =============== FIN javascript =============== -->
+</body>
 
-	</body>
 </html>
